versions/0.9.0/_sources/refs/_aws-cdk_aws-athena.rst.txt
.. @jsii-pacmak:meta@ {"fingerprint":"ZFpP7o9Vp3ZYln3VI8X9JXTLY/1AjyHohNSFMQoBubA="}

@aws-cdk/aws-athena
===================

.. tabs::

   .. group-tab:: C#

      View in `Nuget <https://www.nuget.org/packages/Amazon.CDK.AWS.Athena/0.9.0>`_

      **csproj**:

      .. code-block:: xml

         <PackageReference Include="Amazon.CDK.AWS.Athena" Version="0.9.0" />

      **dotnet**:

      .. code-block:: console

         dotnet add package Amazon.CDK.AWS.Athena --version 0.9.0

      **packages.config**:

      .. code-block:: xml

         <package id="Amazon.CDK.AWS.Athena" version="0.9.0" />


   .. group-tab:: Java

      View in `Maven Central <https://repo1.maven.org/maven2/software/amazon/awscdk/athena/0.9.0/>`_

      **Apache Buildr**:

      .. code-block:: none

         'software.amazon.awscdk:athena:jar:0.9.0'

      **Apache Ivy**:

      .. code-block:: xml

         <dependency groupId="software.amazon.awscdk" name="athena" rev="0.9.0"/>

      **Apache Maven**:

      .. code-block:: xml

         <dependency>
           <groupId>software.amazon.awscdk</groupId>
           <artifactId>athena</artifactId>
           <version>0.9.0</version>
         </dependency>

      **Gradle / Grails**:

      .. code-block:: none

         compile 'software.amazon.awscdk:athena:0.9.0'

      **Groovy Grape**:

      .. code-block:: none

         @Grapes(
         @Grab(group='software.amazon.awscdk', module='athena', version='0.9.0')
         )


   .. group-tab:: JavaScript

      View in `NPM <https://www.npmjs.com/package/@aws-cdk/aws-athena/v/0.9.0>`_

      **npm**:

      .. code-block:: console

         $ npm i @aws-cdk/aws-athena@0.9.0

      **package.json**:

      .. code-block:: js

         {
           "@aws-cdk/aws-athena": "^0.9.0"
         }

      **yarn**:

      .. code-block:: console

         $ yarn add @aws-cdk/aws-athena@0.9.0


   .. group-tab:: TypeScript

      View in `NPM <https://www.npmjs.com/package/@aws-cdk/aws-athena/v/0.9.0>`_

      **npm**:

      .. code-block:: console

         $ npm i @aws-cdk/aws-athena@0.9.0

      **package.json**:

      .. code-block:: js

         {
           "@aws-cdk/aws-athena": "^0.9.0"
         }

      **yarn**:

      .. code-block:: console

         $ yarn add @aws-cdk/aws-athena@0.9.0



.. mdinclude:: ./__aws-cdk_aws-athena.README.md

Reference
---------

.. py:module:: @aws-cdk/aws-athena

NamedQueryName
^^^^^^^^^^^^^^

.. py:class:: NamedQueryName(valueOrFunction, [displayName])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.Athena;

      .. code-tab:: java

         import software.amazon.awscdk.services.athena.NamedQueryName;

      .. code-tab:: javascript

         const { NamedQueryName } = require('@aws-cdk/aws-athena');

      .. code-tab:: typescript

         import { NamedQueryName } from '@aws-cdk/aws-athena';



   :extends: :py:class:`@aws-cdk/cdk.CloudFormationToken`
   :param valueOrFunction: What this token will evaluate to, literal or function.
   :type valueOrFunction: any
   :param displayName: A human-readable display hint for this Token
   :type displayName: string or undefined


cloudformation
^^^^^^^^^^^^^^
.. py:module:: @aws-cdk/aws-athena.cloudformation

NamedQueryResource
~~~~~~~~~~~~~~~~~~

.. py:class:: NamedQueryResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.Athena;

      .. code-tab:: java

         import software.amazon.awscdk.services.athena.cloudformation.NamedQueryResource;

      .. code-tab:: javascript

         const { cloudformation.NamedQueryResource } = require('@aws-cdk/aws-athena');

      .. code-tab:: typescript

         import { cloudformation.NamedQueryResource } from '@aws-cdk/aws-athena';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``NamedQueryResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``NamedQueryResource``
   :type properties: :py:class:`~@aws-cdk/aws-athena.cloudformation.NamedQueryResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: string => any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


   .. py:attribute:: ref

      :type: :py:class:`~@aws-cdk/aws-athena.NamedQueryName` *(readonly)*


NamedQueryResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: NamedQueryResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.Athena;

      .. code-tab:: java

         import software.amazon.awscdk.services.athena.cloudformation.NamedQueryResourceProps;

      .. code-tab:: javascript

         // cloudformation.NamedQueryResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.NamedQueryResourceProps } from '@aws-cdk/aws-athena';





   .. py:attribute:: database

      ``AWS::Athena::NamedQuery.Database``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-athena-namedquery.html#cfn-athena-namedquery-database


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


   .. py:attribute:: queryString

      ``AWS::Athena::NamedQuery.QueryString``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-athena-namedquery.html#cfn-athena-namedquery-querystring


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


   .. py:attribute:: description

      ``AWS::Athena::NamedQuery.Description``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-athena-namedquery.html#cfn-athena-namedquery-description


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:attribute:: namedQueryName

      ``AWS::Athena::NamedQuery.Name``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-athena-namedquery.html#cfn-athena-namedquery-name


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined



.. py:currentmodule:: @aws-cdk/aws-athena

